# astro-provider-snowflake

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
dev/: .env_example  Dockerfile  docker-compose.override.yml  requirements-snowpark.txt  requirements.txt
dev/dags/: dataframe_poc_dag.py  housing_ml_dag.py  sample.py  snowpark_container_test.py  snowpark_test.py  snowservice_test.py  sproc_test_dag.py
dev/include/: astro_provider_snowflake-0.0.1-py3-none-any.whl  astro_provider_snowflake-0.0.1.dev0-py3-none-any.whl  astro_provider_snowflake-0.0.1a1-py3-none-any.whl  astro_provider_snowpark-0.0.0-py3-none-any.whl  snowflake_snowpark_python-1.3.0-py3-none-any.whl  test.py  tests.py
dev/include/airflow_task_runner/: Dockerfile  requirements-runner.txt  requirements.txt
dev/include/data/: yellow_tripdata_sample_2019_01.csv
dev/include/utils/: cloud_ide_cct_snowpark_python.json  setup_snowflake.py  snowflake_xcom_backend.py
dev/tests/: test.py  test_snowflake_xcom.py  tests.py
snowpark_provider/: __init__.py
snowpark_provider/decorators/: snowpark.py
snowpark_provider/hooks/: snowpark.py
snowpark_provider/operators/: snowpark.py  snowpark_virtualenv_script.jinja2
snowpark_provider/utils/: docker_helpers.py  snowpark_helpers.py  xcom_helpers.py
snowpark_provider/xcom_backends/: snowflake.py
src/astro_snowflake/decorators/: snowflake.py
src/astro_snowflake/hooks/: snowflake.py
src/astro_snowflake/operators/: snowflake.py
tests/: test_snowpark_containiers.py
tests/xcom_backends/: test_snowflake.py
(+27 files in other folders)
