[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-provider-snowpark"
authors = [
    {name = "Michael Gregory", email = "michael.gregory@astronomer.io"},
]
license = {text = "Apache License 2.0"}
description = "Airflow provider for Snowpark"
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = ["version"]
requires-python = "~=3.8"
dependencies = [
    "apache-airflow>=2.4",
    "aiohttp>=3.8.4",
    "snowflake-connector-python[pandas]!=3.0.3",
    "snowflake-snowpark-python[pandas]>=1.4",
    "numpy>=1.23",
    "apache-airflow-providers-snowflake>=4.0.4",
]

[project.urls]
Homepage = "https://astronomer.io"
Source = "https://github.com/astronomer/astro-provider-snowflake/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "snowpark_provider.__init__:get_provider_info"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "snowpark_provider.__version__"}

[tool.setuptools.packages.find]
exclude = ["*tests.*", "*tests"]